<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/prayerFragment">

    <fragment
        android:id="@+id/prayerFragment"
        android:name="com.orbitalsonic.prayertimesample.presentation.prayer.PrayerFragment"
        android:label="@string/prayer_times">
        <action
            android:id="@+id/action_prayer_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.orbitalsonic.prayertimesample.presentation.settings.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_settings_to_prayerConventionFragment"
            app:destination="@id/prayerConventionFragment" />
        <action
            android:id="@+id/action_settings_to_manualCorrectionFragment"
            app:destination="@id/manualCorrectionFragment" />
    </fragment>

    <fragment
        android:id="@+id/prayerConventionFragment"
        android:name="com.orbitalsonic.prayertimesample.presentation.settings.PrayerConventionFragment"
        android:label="@string/prayer_time_convention">
        <action
            android:id="@+id/action_prayerConventionFragment_to_customAngleFragment"
            app:destination="@id/customAngleFragment" />
    </fragment>

    <fragment
        android:id="@+id/customAngleFragment"
        android:name="com.orbitalsonic.prayertimesample.presentation.settings.CustomAngleFragment"
        android:label="@string/ptc_custom" />

    <fragment
        android:id="@+id/manualCorrectionFragment"
        android:name="com.orbitalsonic.prayertimesample.presentation.settings.ManualCorrectionFragment"
        android:label="@string/manual_correction" />
</navigation>
